# ros2-cyberbot

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
cyberbot_bringup/: CMakeLists.txt  package.xml
cyberbot_bringup/config/: sllidar.yaml  teleop.yaml
cyberbot_bringup/launch/: agent.launch.py  d435.launch.py  init.launch.py  sllidar.launch.py  teleop.launch.py
cyberbot_controller/: CMakeLists.txt  cyberbot_controller_plugin.xml  package.xml
cyberbot_controller/include/cyberbot_controller/: cyberbot_controller.hpp
cyberbot_controller/src/: cyberbot_controller.cpp
cyberbot_description/: CMakeLists.txt  package.xml
cyberbot_description/launch/: description.launch.py
cyberbot_description/rviz/: description.rviz
cyberbot_description/sdf/: config.json  cyberbot_control.xml  model.config  robot.sdf  sensors.xml
cyberbot_description/sdf/assets/: attachment.part  attachment.stl  bolt.part  bolt.stl  bottom_leg_motor.part  bottom_leg_motor.stl  button_blende.part  button_blende.stl  carbon_pipe.part  carbon_pipe.stl  cybergear.part  cybergear.stl  dc_power_jack_5_5_2_1_body.part  dc_power_jack_5_5_2_1_body.stl  hub.part  hub.stl  imu.part  imu.stl  knuppel.part  knuppel.stl  leg_bottom_other.part  leg_bottom_other.stl  leg_top_motor.part  leg_top_motor.stl  leg_top_other.part  leg_top_other.stl  panel.part  panel.stl  part.part  part.stl  part_2.part  part_2.stl  pc_holder.part  pc_holder.stl  pdb_holder.part  pdb_holder.stl  tire_5_inch.part  tire_5_inch.stl
cyberbot_gazebo/: CMakeLists.txt  package.xml
cyberbot_gazebo/config/: cyberbot_controllers.yaml  gui.config  ros_gz_bridge.yaml
cyberbot_gazebo/launch/: gazebo.launch.py
cyberbot_gazebo/worlds/: playground.sdf
