<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>cyberbot_gazebo</name>
    <version>0.0.0</version>
    <description>CyberBot Gazebo Package</description>
    <maintainer email="johannes.fischer@fischejo.de">Johannes Fischer</maintainer>
    <license>MIT</license>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>gz_ros2_control</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
